Hanami: melhorando a classe ReadFileService, deixando mais robusta e com uma boa injeção de dependência. Adicionado também uma classe dto para evitar problemas.